User integration test